parse.output
Terminals unused in grammar

   CASESYM
   SWITCHSYM
   BREAKSYM
   CONTINUESYM
   EXITSYM
   DOSYM
   THENSYM
   WHILESYM
   RETURNSYM
   INTSYM
   FLOATSYM
   BOOLSYM
   CHARSYM
   CONSTSYM
   FUNCSYM
   COLON
   LMPAREN
   RMPAREN
   COMMENT
   COMMA
   INC
   DEC
   ODD
   NOT
   LETTER
   BOOLVALUE


Grammar

    0 $accept: program $end

    1 program: stmts

    2 get_code_addr: %empty

    3 stmts: stmts SEMICOLON stmt
    4      | stmts error SEMICOLON stmt
    5      | stmt

    6 $@1: %empty

    7 if: IFSYM term get_code_addr $@1 stmts

    8 stmt: assignment
    9     | if ENDSYM

   10 $@2: %empty

   11 $@3: %empty

   12 stmt: if ELSESYM get_code_addr $@2 stmt $@3 ENDSYM
   13     | REPEATSYM get_code_addr stmts UNTILSYM term
   14     | WRITESYM term
   15     | READSYM id

   16 $@4: %empty

   17 $@5: %empty

   18 $@6: %empty

   19 stmt: FORSYM LPAREN stmt SEMICOLON get_code_addr term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

   20 assignment: id BECOME term

   21 id: IDENT

   22 term: term LES term
   23     | term GTR term
   24     | term NEQ term
   25     | term EQL term
   26     | term LEQ term
   27     | term GEQ term
   28     | term TIMES term
   29     | term SLASH term
   30     | term MOD term
   31     | term MINUS term
   32     | term PLUS term
   33     | term OR term
   34     | term XOR term
   35     | term AND term
   36     | factor

   37 factor: id
   38       | NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256) 4
CASESYM (258)
FORSYM (259) 19
SWITCHSYM (260)
BREAKSYM (261)
CONTINUESYM (262)
EXITSYM (263)
DOSYM (264)
REPEATSYM (265) 13
UNTILSYM (266) 13
IFSYM (267) 7
THENSYM (268)
WHILESYM (269)
WRITESYM (270) 14
READSYM (271) 15
RETURNSYM (272)
ENDSYM (273) 9 12
INTSYM (274)
FLOATSYM (275)
BOOLSYM (276)
CHARSYM (277)
CONSTSYM (278)
FUNCSYM (279)
SEMICOLON (280) 3 4 19
COLON (281)
LPAREN (282) 19
RPAREN (283) 19
LBPAREN (284) 19
RBPAREN (285) 19
LMPAREN (286)
RMPAREN (287)
COMMENT (288)
COMMA (289)
INC (290)
DEC (291)
ODD (292)
MOD (293) 30
PLUS (294) 32
MINUS (295) 31
SLASH (296) 29
TIMES (297) 28
LES (298) 22
LEQ (299) 26
GTR (300) 23
GEQ (301) 27
EQL (302) 25
NEQ (303) 24
BECOME (304) 20
XOR (305) 34
OR (306) 33
AND (307) 35
NOT (308)
IDENT (309) 21
NUMBER (310) 38
LETTER (311)
IFX (312)
ELSESYM (313) 12
BOOLVALUE (314)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
get_code_addr (62)
    on left: 2, on right: 7 12 13 19
stmts (63)
    on left: 3 4 5, on right: 1 3 4 7 13 19
if (64)
    on left: 7, on right: 9 12
$@1 (65)
    on left: 6, on right: 7
stmt (66)
    on left: 8 9 12 13 14 15 19, on right: 3 4 5 12 19
$@2 (67)
    on left: 10, on right: 12
$@3 (68)
    on left: 11, on right: 12
$@4 (69)
    on left: 16, on right: 19
$@5 (70)
    on left: 17, on right: 19
$@6 (71)
    on left: 18, on right: 19
assignment (72)
    on left: 20, on right: 8 19
id (73)
    on left: 21, on right: 15 20 37
term (74)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    7 13 14 19 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35
factor (75)
    on left: 37 38, on right: 36


State 0

    0 $accept: . program $end

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    program     go to state 7
    stmts       go to state 8
    if          go to state 9
    stmt        go to state 10
    assignment  go to state 11
    id          go to state 12


State 1

   19 stmt: FORSYM . LPAREN stmt SEMICOLON get_code_addr term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

    LPAREN  shift, and go to state 13


State 2

   13 stmt: REPEATSYM . get_code_addr stmts UNTILSYM term

    $default  reduce using rule 2 (get_code_addr)

    get_code_addr  go to state 14


State 3

    7 if: IFSYM . term get_code_addr $@1 stmts

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 17
    factor  go to state 18


State 4

   14 stmt: WRITESYM . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 19
    factor  go to state 18


State 5

   15 stmt: READSYM . id

    IDENT  shift, and go to state 6

    id  go to state 20


State 6

   21 id: IDENT .

    $default  reduce using rule 21 (id)


State 7

    0 $accept: program . $end

    $end  shift, and go to state 21


State 8

    1 program: stmts .
    3 stmts: stmts . SEMICOLON stmt
    4      | stmts . error SEMICOLON stmt

    error      shift, and go to state 22
    SEMICOLON  shift, and go to state 23

    $end  reduce using rule 1 (program)


State 9

    9 stmt: if . ENDSYM
   12     | if . ELSESYM get_code_addr $@2 stmt $@3 ENDSYM

    ENDSYM   shift, and go to state 24
    ELSESYM  shift, and go to state 25


State 10

    5 stmts: stmt .

    $default  reduce using rule 5 (stmts)


State 11

    8 stmt: assignment .

    $default  reduce using rule 8 (stmt)


State 12

   20 assignment: id . BECOME term

    BECOME  shift, and go to state 26


State 13

   19 stmt: FORSYM LPAREN . stmt SEMICOLON get_code_addr term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    if          go to state 9
    stmt        go to state 27
    assignment  go to state 11
    id          go to state 12


State 14

   13 stmt: REPEATSYM get_code_addr . stmts UNTILSYM term

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    stmts       go to state 28
    if          go to state 9
    stmt        go to state 10
    assignment  go to state 11
    id          go to state 12


State 15

   38 factor: NUMBER .

    $default  reduce using rule 38 (factor)


State 16

   37 factor: id .

    $default  reduce using rule 37 (factor)


State 17

    7 if: IFSYM term . get_code_addr $@1 stmts
   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39
    XOR    shift, and go to state 40
    OR     shift, and go to state 41
    AND    shift, and go to state 42

    $default  reduce using rule 2 (get_code_addr)

    get_code_addr  go to state 43


State 18

   36 term: factor .

    $default  reduce using rule 36 (term)


State 19

   14 stmt: WRITESYM term .
   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39
    XOR    shift, and go to state 40
    OR     shift, and go to state 41
    AND    shift, and go to state 42

    $default  reduce using rule 14 (stmt)


State 20

   15 stmt: READSYM id .

    $default  reduce using rule 15 (stmt)


State 21

    0 $accept: program $end .

    $default  accept


State 22

    4 stmts: stmts error . SEMICOLON stmt

    SEMICOLON  shift, and go to state 44


State 23

    3 stmts: stmts SEMICOLON . stmt

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    if          go to state 9
    stmt        go to state 45
    assignment  go to state 11
    id          go to state 12


State 24

    9 stmt: if ENDSYM .

    $default  reduce using rule 9 (stmt)


State 25

   12 stmt: if ELSESYM . get_code_addr $@2 stmt $@3 ENDSYM

    $default  reduce using rule 2 (get_code_addr)

    get_code_addr  go to state 46


State 26

   20 assignment: id BECOME . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 47
    factor  go to state 18


State 27

   19 stmt: FORSYM LPAREN stmt . SEMICOLON get_code_addr term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

    SEMICOLON  shift, and go to state 48


State 28

    3 stmts: stmts . SEMICOLON stmt
    4      | stmts . error SEMICOLON stmt
   13 stmt: REPEATSYM get_code_addr stmts . UNTILSYM term

    error      shift, and go to state 22
    UNTILSYM   shift, and go to state 49
    SEMICOLON  shift, and go to state 23


State 29

   30 term: term MOD . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 50
    factor  go to state 18


State 30

   32 term: term PLUS . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 51
    factor  go to state 18


State 31

   31 term: term MINUS . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 52
    factor  go to state 18


State 32

   29 term: term SLASH . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 53
    factor  go to state 18


State 33

   28 term: term TIMES . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 54
    factor  go to state 18


State 34

   22 term: term LES . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 55
    factor  go to state 18


State 35

   26 term: term LEQ . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 56
    factor  go to state 18


State 36

   23 term: term GTR . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 57
    factor  go to state 18


State 37

   27 term: term GEQ . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 58
    factor  go to state 18


State 38

   25 term: term EQL . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 59
    factor  go to state 18


State 39

   24 term: term NEQ . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 60
    factor  go to state 18


State 40

   34 term: term XOR . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 61
    factor  go to state 18


State 41

   33 term: term OR . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 62
    factor  go to state 18


State 42

   35 term: term AND . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 63
    factor  go to state 18


State 43

    7 if: IFSYM term get_code_addr . $@1 stmts

    $default  reduce using rule 6 ($@1)

    $@1  go to state 64


State 44

    4 stmts: stmts error SEMICOLON . stmt

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    if          go to state 9
    stmt        go to state 65
    assignment  go to state 11
    id          go to state 12


State 45

    3 stmts: stmts SEMICOLON stmt .

    $default  reduce using rule 3 (stmts)


State 46

   12 stmt: if ELSESYM get_code_addr . $@2 stmt $@3 ENDSYM

    $default  reduce using rule 10 ($@2)

    $@2  go to state 66


State 47

   20 assignment: id BECOME term .
   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39
    XOR    shift, and go to state 40
    OR     shift, and go to state 41
    AND    shift, and go to state 42

    $default  reduce using rule 20 (assignment)


State 48

   19 stmt: FORSYM LPAREN stmt SEMICOLON . get_code_addr term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

    $default  reduce using rule 2 (get_code_addr)

    get_code_addr  go to state 67


State 49

   13 stmt: REPEATSYM get_code_addr stmts UNTILSYM . term

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 68
    factor  go to state 18


State 50

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   30     | term MOD term .
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    $default  reduce using rule 30 (term)


State 51

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   32     | term PLUS term .
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 32 (term)


State 52

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   31     | term MINUS term .
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 31 (term)


State 53

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   29     | term SLASH term .
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    $default  reduce using rule 29 (term)


State 54

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   28     | term TIMES term .
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    $default  reduce using rule 28 (term)


State 55

   22 term: term . LES term
   22     | term LES term .
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 22 (term)


State 56

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   26     | term LEQ term .
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 26 (term)


State 57

   22 term: term . LES term
   23     | term . GTR term
   23     | term GTR term .
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 23 (term)


State 58

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   27     | term GEQ term .
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 27 (term)


State 59

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   25     | term EQL term .
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 25 (term)


State 60

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   24     | term NEQ term .
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33

    $default  reduce using rule 24 (term)


State 61

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   34     | term XOR term .
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39
    AND    shift, and go to state 42

    $default  reduce using rule 34 (term)


State 62

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   33     | term OR term .
   34     | term . XOR term
   35     | term . AND term

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39
    AND    shift, and go to state 42

    $default  reduce using rule 33 (term)


State 63

   22 term: term . LES term
   23     | term . GTR term
   24     | term . NEQ term
   25     | term . EQL term
   26     | term . LEQ term
   27     | term . GEQ term
   28     | term . TIMES term
   29     | term . SLASH term
   30     | term . MOD term
   31     | term . MINUS term
   32     | term . PLUS term
   33     | term . OR term
   34     | term . XOR term
   35     | term . AND term
   35     | term AND term .

    MOD    shift, and go to state 29
    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SLASH  shift, and go to state 32
    TIMES  shift, and go to state 33
    LES    shift, and go to state 34
    LEQ    shift, and go to state 35
    GTR    shift, and go to state 36
    GEQ    shift, and go to state 37
    EQL    shift, and go to state 38
    NEQ    shift, and go to state 39

    $default  reduce using rule 35 (term)


State 64

    7 if: IFSYM term get_code_addr $@1 . stmts

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    stmts       go to state 69
    if          go to state 9
    stmt        go to state 10
    assignment  go to state 11
    id          go to state 12


State 65

    4 stmts: stmts error SEMICOLON stmt .

    $default  reduce using rule 4 (stmts)


State 66

   12 stmt: if ELSESYM get_code_addr $@2 . stmt $@3 ENDSYM

    FORSYM     shift, and go to state 1
    REPEATSYM  shift, and go to state 2
    IFSYM      shift, and go to state 3
    WRITESYM   shift, and go to state 4
    READSYM    shift, and go to state 5
    IDENT      shift, and go to state 6

    if          go to state 9
    stmt        go to state 70
    assignment  go to state 11
    id          go to state 12


State 67

   19 stmt: FORSYM LPAREN stmt SEMICOLON get_code_addr . term get_code_addr $@4 get_code_addr $@5 SEMICOLON get_code_addr assignment $@6 RPAREN LBPAREN stmts RBPAREN

    IDENT   shift, and go to state 6
    NUMBER  shift, and go to state 15

    id      go to state 16
    term    go to state 71
    factor  go to state 18


State 68
